--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
     "typescript": "4.1.3"
   },
   "jest": {
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    },
     "moduleFileExtensions": [
       "js",
       "json",
